# QuantScenarioBench

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: RELEASE_CHECKLIST.md  todo-hf-space-release-automation.md
quantscenariobench/: __init__.py
quantscenariobench/api/: __init__.py  _simulate.py  _simulate_correlated_basket.py
quantscenariobench/diagnostics/: __init__.py  _autocorrelation.py  _bands.py  _kurtosis.py  _report.py  _returns.py
quantscenariobench/export/: __init__.py  _parquet.py  _publish.py
quantscenariobench/interface/: __init__.py  _basket_metadata.py  _market_model.py  _scenario.py  _time_grid.py  _warnings.py
quantscenariobench/models/: __init__.py  _black_scholes.py  _heston.py  _rough_bergomi.py
quantscenariobench/solver/: __init__.py  _sde.py
quantscenariobench/testing/: __init__.py  _conformance.py  _dummy_model.py
spaces/leaderboard/: README.md  app.py  requirements.txt
tests/: test_benchmark_conformance.py  test_benchmark_cvar.py  test_benchmark_distributional.py  test_benchmark_gmv.py  test_benchmark_hrp.py  test_benchmark_interface.py  test_benchmark_metrics.py  test_benchmark_result_schema.py  test_benchmark_returns.py  test_benchmark_runner.py  test_benchmark_strategies.py  test_black_scholes.py  test_conformance.py  test_correlated_basket.py  test_diagnostics.py  test_evaluation_result_schema.py  test_export_parquet.py  test_export_publish.py  test_heston.py  test_hub_publish_evaluation_results.py  test_interface.py  test_leaderboard_aggregation.py  test_leaderboard_space_app.py  test_leaderboard_space_deployment.py  test_leaderboard_space_error_handling.py  test_leaderboard_space_filtering.py  test_leaderboard_space_sorting.py  test_local_evaluation_results_storage.py  test_rough_bergomi.py  test_scaffold.py  test_simulate.py  test_solver.py  test_to_evaluation_result.py
tests/fixtures/: golden_benchmark_results.json
(+61 files in other folders)
