[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantscenariobench"
version = "1.2.1"
description = "JAX-native framework for generating reproducible market scenarios, benchmarking portfolio strategies against them, and publishing results as versioned datasets with a hosted Leaderboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.38",
    "diffrax==0.7.2",
    "equinox>=0.11.10",
    "pyarrow>=14.0",
    "huggingface_hub>=0.23",
    "scipy>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pandas>=2.0",
    "datasets>=2.0",
    "gradio>=6.19",
]

[tool.hatch.build.targets.wheel]
packages = ["quantscenariobench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
